Fixes #16122: Stop listenning for inventories on port 80

--- a/relay/sources/apache/rudder-apache-relay-nossl.conf
+++ b/relay/sources/apache/rudder-apache-relay-nossl.conf
@@ -1,7 +1,7 @@
 # Rudder webapp
 RewriteEngine on
 
-# If we are not currently connected via HTTP/S
+# If we are not currently connected via HTTPS
 RewriteCond %{HTTPS} !=on
 
 # Restrict redirection to RudderRelay API 
