--- a/relay/sources/apache/rudder-apache-relay-ssl.conf
+++ b/relay/sources/apache/rudder-apache-relay-ssl.conf
@@ -39,3 +39,80 @@ RewriteRule /policies/(.*?)/(.*) /var/rudder/share/$1/$2
   Include /opt/rudder/etc/rudder-networks-24.conf
 </Location>
 
+# Expose the server UUID through https
+Alias /uuid /opt/rudder/etc/uuid.hive
+<Directory /opt/rudder/etc>
+  Require all granted
+</Directory>
+
+# WebDAV share to receive inventories
+Alias /inventories /var/rudder/inventories/incoming
+<Directory /var/rudder/inventories/incoming>
+  DAV on
+  AuthName "WebDAV Storage"
+  AuthType Basic
+  AuthUserFile /opt/rudder/etc/htpasswd-webdav-initial
+  Require valid-user
+
+  # rudder-networks-24.conf is automatically generated according to the hosts allowed by rudder.
+  Include /opt/rudder/etc/rudder-networks-24.conf
+
+  <LimitExcept PUT>
+    Require all denied
+  </LimitExcept>
+</Directory>
+
+# WebDAV share to receive inventories
+Alias /inventory-updates /var/rudder/inventories/accepted-nodes-updates
+<Directory /var/rudder/inventories/accepted-nodes-updates>
+  DAV on
+  AuthName "WebDAV Storage"
+  AuthType Basic
+  AuthUserFile /opt/rudder/etc/htpasswd-webdav
+  Require valid-user
+
+  # rudder-networks-24.conf is automatically generated according to the hosts allowed by rudder.
+  Include /opt/rudder/etc/rudder-networks-24.conf
+
+  <LimitExcept PUT>
+    Require all denied
+  </LimitExcept>
+</Directory>
+
+# WebDAV share to receive reports
+Alias /reports /var/rudder/reports/incoming
+<Directory /var/rudder/reports/incoming>
+  DAV on
+  AuthName "WebDAV Storage"
+  AuthType Basic
+  AuthUserFile /opt/rudder/etc/htpasswd-webdav
+  Require valid-user
+
+  # rudder-networks-24.conf is automatically generated according to the hosts allowed by rudder.
+  Include /opt/rudder/etc/rudder-networks-24.conf
+
+  <LimitExcept PUT>
+    Require all denied
+  </LimitExcept>
+</Directory>
+
+# Load relay-api
+ProxyPass /rudder/relay-api/ http://127.0.0.1:3030/rudder/relay-api/1/
+
+## Set directory access permissions
+
+# Disallow by default
+<Location /rudder/relay-api/>
+  Require all denied
+</Location>
+
+<Location /rudder/relay-api/shared-files>
+  # rudder-networks-24.conf is automatically generated according to the hosts allowed by rudder.
+  Include /opt/rudder/etc/rudder-networks-24.conf
+</Location>
+
+<Location /rudder/relay-api/remote-run>
+  # rudder-networks-policy-server-24.conf is automatically generated according to the policy server defined in rudder.
+  Include /opt/rudder/etc/rudder-networks-policy-server-24.conf
+</Location>
+
