--- a/webapp/sources/rudder/rudder-web/src/main/resources/configuration.properties.sample
+++ b/webapp/sources/rudder/rudder-web/src/main/resources/configuration.properties.sample
@@ -579,77 +579,14 @@ rudder.jvm.fatal.exceptions=
 ########################
 
 #
-# The path of the root directory of the Technique library.
-# It MUST be the same directory of ${rudder.dir.gitRoot}
-# or one of its sub-directories
-#
-rudder.dir.techniques=/var/rudder/configuration-repository/techniques
-
-#
-# Configure the refs path to use for the git repository for
-# the Technique Reference Library.
-# The default is to use "refs/heads/master" (the local master
-# branch).
-# You have to use the full ref path.
-#
-rudder.techniqueLibrary.git.refs.path=refs/heads/master
-
-#
 # If true, an archive of Rules, groups,
 # Directives and Active Techniques are recorded
 # to the rudder.dir.gitRoot directory specified above
 # and a git commit is performed when any of these items is modified.
 # Boolean, defaults to true.
+# You should change that value to "false" *only* if you do replication
+# between rudder instances based on git. Rudder will always assume that
+# directive/rules/parameters/etc are available in a serialized form at that
+# place.
 #
 rudder.autoArchiveItems=true
-
-#
-# Command line tools used to check the validity of generated promises
-# DEPRECATED: these commands aren't used anymore. This task is now managed by hook:
-#             /opt/rudder/etc/hooks.d/policy-generation-node-ready/10-cf-promise-check
-#
-#rudder.community.checkpromises.command=/var/rudder/cfengine-community/bin/cf-promises
-#rudder.nova.checkpromises.command=/bin/true
-
-#
-# Command to force the server to reload its promises
-# This will be run every time promises are regenerated on the root server
-# DEPRECATED: that command isn't used anymore. This task is now managed by hook:
-#             /opt/rudder/etc/hooks.d/policy-generation-finished/50-reload-policy-file-server
-#
-#rudder.cfengine.reload.server.command=/opt/rudder/bin/rudder-reload-cf-serverd
-
-#
-# A list of properties actually used in Rudder, but for features disable in the UI.
-#
-
-#
-#  Upload directory
-#  The directory where new uploaded files are stored
-#  DEPRECATED: not used any more in Rudder UI.
-#
-upload.root.directory=/var/rudder/files/
-
-#
-# The directory used to put uploaded files shared between
-# several nodes.
-# A symlink from the file to the relevant node promise directory
-# will be created on each node needing the file in place
-# of copying it.
-# DEPRECATED: not used anymore in Rudder UI
-rudder.dir.uploaded.file.sharing=/var/rudder/files/
-
-#
-# LDAP DIT configuration
-#
-# You must not modify the following properties, used to
-# configure the internal structure of the LDAP Directory.
-# DEPRECATED: Changing these values will result in a non-working Rudder server
-#
-ldap.node.base=cn=rudder-configuration
-ldap.rudder.base=ou=Rudder, cn=rudder-configuration
-ldap.inventories.software.basedn=ou=Inventories, cn=rudder-configuration
-ldap.inventories.accepted.basedn=ou=Accepted Inventories, ou=Inventories, cn=rudder-configuration
-ldap.inventories.pending.basedn=ou=Pending Inventories, ou=Inventories, cn=rudder-configuration
-ldap.inventories.removed.basedn=ou=Removed Inventories, ou=Inventories, cn=rudder-configuration
-
