--- a/rudder-lang/Cargo.toml
+++ b/rudder-lang/Cargo.toml
@@ -1,19 +1,19 @@
 [package]
 name = "rudderc"
-version = "0.1.0"
-authors = ["Benoît Peccatte <benoit.peccatte@normation.com>"]
+version = "0.0.0-dev"
+authors = ["Benoît Peccatte <benoit.peccatte@normation.com>", "Rudder developers <dev@rudder.io>"]
 edition = "2018"
 
 [dependencies]
 maplit = "^1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-structopt = "0.2"
+structopt = "0.3"
 nom = "^5.0"
 toml = "^0.5"
 regex = "^1.1"
-lazy_static = "^1.3"
-nom_locate = { version = "^0.3", path = "/home/bpeccatte/Projects/nom_locate" }
+lazy_static = "^1.4"
+nom_locate = "^1.0"
 
 [dev-dependencies]
-proptest = "0.9.1"
+proptest = "0.9"
