--- a/rudder-lang/Cargo.toml
+++ b/rudder-lang/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
 name = "rudderc"
 version = "0.0.0-dev"
-authors = ["Benoît Peccatte <benoit.peccatte@normation.com>", "Rudder developers <dev@rudder.io>"]
+authors = ["Benoît Peccatte <benoit.peccatte@rudder.io>", "Rudder developers <dev@rudder.io>"]
 edition = "2018"
+readme = "README.adoc"
+homepage = "https://www.rudder.io"
+repository = "https://github.com/Normation/rudder"
+license = "GPL3"
 
 [dependencies]
 maplit = "^1.0"
@@ -11,7 +15,7 @@ serde_json = "1.0"
 structopt = "0.3"
 nom = "^5.0"
 toml = "^0.5"
-regex = "^1.1"
+regex = "^1.3"
 lazy_static = "^1.4"
 nom_locate = "^1.0"
 
