--- a/webapp/sources/ldap-inventory/inventory-provisioning-web/pom.xml
+++ b/webapp/sources/ldap-inventory/inventory-provisioning-web/pom.xml
@@ -35,7 +35,7 @@ along with Rudder.  If not, see <http://www.gnu.org/licenses/>.
   <parent>
     <groupId>com.normation.inventory</groupId>
     <artifactId>inventory-parent</artifactId>
-    <version>5.0.11-BPCE</version>
+    <version>5.0.11-BPCE-2</version>
   </parent>
 
   <artifactId>inventory-provisioning-web</artifactId>
