--- a/webapp/sources/rudder/pom.xml
+++ b/webapp/sources/rudder/pom.xml
@@ -59,7 +59,13 @@ along with Rudder.  If not, see <http://www.gnu.org/licenses/>.
     <!-- fill-in rule templates -->
   </modules>
 
-  <dependencies/>
+  <dependencies>
+	  <dependency>
+	  <groupId>com.github.jbellis</groupId>
+	  <artifactId>jamm</artifactId>
+	  <version>0.3.3</version>
+  </dependency>
+  </dependencies>
 
   <repositories>
     <repository>
