--- a/webapp/sources/rudder/pom.xml
+++ b/webapp/sources/rudder/pom.xml
@@ -64,6 +64,7 @@ along with Rudder.  If not, see <http://www.gnu.org/licenses/>.
 	  <groupId>com.github.jbellis</groupId>
 	  <artifactId>jamm</artifactId>
 	  <version>0.3.3</version>
+	  <scope>provided</scope>
   </dependency>
   </dependencies>
 
