--- a/rudder-lang/Cargo.toml
+++ b/rudder-lang/Cargo.toml
@@ -18,6 +18,7 @@ toml = "^0.5"
 regex = "^1.3"
 lazy_static = "^1.4"
 nom_locate = "^1.0"
+colored = "1.9.0"
 
 [dev-dependencies]
 proptest = "0.9"
