Fixes #16486: Amazon Linux appears as \"Other Linux 2\" in nodes list

--- a/webapp/sources/rudder/rudder-web/src/main/resources/ldapObjectAndAttributes.properties
+++ b/webapp/sources/rudder/rudder-web/src/main/resources/ldapObjectAndAttributes.properties
@@ -97,6 +97,7 @@ os.name.Oracle=Oracle Linux Server
 os.name.Scientific=Scientific Linux
 os.name.Slackware=Slackware
 os.name.Mint=Mint
+os.name.AmazonLinux=Amazon Linux
 os.name.WindowsXP=Windows XP
 os.name.WindowsVista=Windows Vista
 os.name.WindowsSeven=Windows Seven
