Fixes #16511: Default relayd config should have disabled reporting output

--- a/relay/sources/relayd/tools/config/main.conf
+++ b/relay/sources/relayd/tools/config/main.conf
@@ -5,7 +5,7 @@
 
 nodes_list_file = "/var/rudder/lib/relay/nodeslist.json"
 nodes_certs_file = "/var/rudder/lib/ssl/nodescerts.pem"
-node_id = "root"
+node_id = "UNKNOWN"
 listen = "127.0.0.1:3030"
 
 # By default, the number of CPUs
@@ -34,7 +34,7 @@ retention = "1day"
 [processing.reporting]
 directory = "/var/rudder/reports"
 # Can be "database", "upstream" or "disabled"
-output = "database"
+output = "disabled"
 # Can be "log_warn", "log_info", "log_debug"
 skip_event_types = []
 
