--- a/rudder-lang/Cargo.toml
+++ b/rudder-lang/Cargo.toml
@@ -20,6 +20,8 @@ lazy_static = "^1.4"
 nom_locate = "^1.0"
 colored = "1.9.0"
 ngrammatic = "^0.3.1"
+log = "0.4.0"
+env_logger = "0.7.1"
 
 [dev-dependencies]
 proptest = "0.9"
