--- a/webapp/sources/pom.xml
+++ b/webapp/sources/pom.xml
@@ -352,7 +352,7 @@ limitations under the License.
     <scala-version>2.13.1</scala-version>
     <scala-binary-version>2.13</scala-binary-version>
     <scala-parser-combinators-version>1.1.2</scala-parser-combinators-version>
-    <scala-xml-version>1.2.0</scala-xml-version>
+    <scala-xml-version>1.2.0.1-rudder</scala-xml-version>
     <lift-version>3.4.1</lift-version>
     <slf4j-version>1.7.28</slf4j-version>
     <logback-version>1.2.3</logback-version>
