Refs #16811: rl generate oslib from separated build

--- a/rudder-lang/tools/rudderc.conf
+++ b/rudder-lang/tools/rudderc.conf
@@ -1,6 +1,8 @@
 [default_paths]
     ncf="/usr/share/ncf"
     cfengine="/opt/rudder/bin/cf-promises"
+    rudderclibs="/opt/rudder/share/rudder-lang/lib/"
+    translate_config="/opt/rudder/share/rudder-lang/tools/translate_config.toml"
     compile_input="tests/test_files/rl/"
     compile_output="tests/test_files/target/"
     translate_input="tests/test_files/json/"
