--- a/rudder-lang/tools/rudderc-dev.conf
+++ b/rudder-lang/tools/rudderc-dev.conf
@@ -1,6 +1,8 @@
 [default_paths]
     ncf="/usr/share/ncf"
     cfengine="/opt/rudder/bin/cf-promises"
+    rudderclibs="libs/"
+    translate_config="tools/translate_config.toml"
     compile_input="tests/test_files/rl/"
     compile_output="tests/test_files/target/"
     translate_input="tests/test_files/json/"
