--- a/rudder-lang/tools/rudderc.conf
+++ b/rudder-lang/tools/rudderc.conf
@@ -3,7 +3,7 @@
     cfengine="/opt/rudder/bin/cf-promises"
     rudderclibs="/opt/rudder/share/rudder-lang/lib/"
     translate_config="/opt/rudder/share/rudder-lang/tools/translate_config.toml"
-    compile_input="tests/test_files/rl/"
-    compile_output="tests/test_files/target/"
-    translate_input="tests/test_files/json/"
-    translate_output="tests/test_files/target/"
+    compile_input="/tmp/rudderc/tester/"
+    compile_output="/tmp/rudderc/tester/"
+    translate_input="/tmp/rudderc/tester/"
+    translate_output="/tmp/rudderc/tester/"
