--- a/relay/sources/relayd/Cargo.toml
+++ b/relay/sources/relayd/Cargo.toml
@@ -49,6 +49,7 @@ tracing-log = { version = "0.1", default-features = false, features = ["log-trac
 tracing-subscriber = { version = "0.1", default-features = false, features = ["env-filter", "fmt", "tracing-log"] }
 warp = { version = "0.1", default-features = false }
 humantime = "2"
+zip = "0.5"
 
 [dev-dependencies]
 criterion = "0.3"
