--- a/rudder-lang/tools/rudderc.conf
+++ b/rudder-lang/tools/rudderc.conf
@@ -2,8 +2,7 @@
     ncf="/usr/share/ncf"
     cfengine="/opt/rudder/bin/cf-promises"
     rudderclibs="/opt/rudder/share/rudder-lang/lib/"
-    translate_config="/opt/rudder/share/rudder-lang/tools/translate_config.toml"
-    compile_input="/tmp/rudderc/tester/"
-    compile_output="/tmp/rudderc/tester/"
-    translate_input="/tmp/rudderc/tester/"
-    translate_output="/tmp/rudderc/tester/"
+    compile_input="tests/test_files/rl/"
+    compile_output="tests/test_files/target/"
+    translate_input="tests/test_files/json/"
+    translate_output="tests/test_files/target/"
