--- a/webapp/sources/api-doc/paths/directives/id.yml
+++ b/webapp/sources/api-doc/paths/directives/id.yml
@@ -90,6 +90,8 @@ post:
   summary: Update a directive details
   description: Update directive information
   operationId: updateDirective
+  parameters:
+    - $ref: ../../components/parameters/directive-id.yml
   requestBody:
     required: true
     content:
