--- a/rudder-lang/Makefile
+++ b/rudder-lang/Makefile
@@ -1,27 +1,24 @@
 .DEFAULT_GOAL := build
 SHELL = /bin/bash
 
-cargo:
-	curl https://sh.rustup.rs -sSf | sh -s -- -y
+include ../rust.makefile
 
-deps:
-	apt update && apt upgrade -y
-	apt install -y perl
+apt-dependencies:
+	apt update && apt install -y --no-install-recommends perl
 	echo | cpan
 	perl -MCPAN -e 'install Config::IniFiles'
 
-build: deps 
+yum-dependencies:
+	yum install perl
+	echo | cpan
+	perl -MCPAN -e 'install Config::IniFiles'
+
+build:
 	perl tools/generate-lib
 	cargo build --release
 
-test:
-	cargo test
+docs:
+	mkdir -p target/docs
+	asciidoctor --destination-dir=target/docs docs/index.adoc
 
-doc:
-	cargo doc --help
-
-stats:
-	@ echo -n "TODOS  : " && grep -r TODO src | wc -l
-	@ echo -n "Commits: " && git log --oneline | wc -l
-	@ tokei
-#       @ echo "Lines  : " && find . -name '*.rs' | xargs wc -l
+.PHONY: docs
