--- a/rudder-lang/Cargo.toml
+++ b/rudder-lang/Cargo.toml
@@ -8,6 +8,10 @@ homepage = "https://www.rudder.io"
 repository = "https://github.com/Normation/rudder"
 license = "GPL3"
 
+[[bin]]
+name = "rudderc"
+path = "src/bin/rudderc.rs"
+
 [dependencies]
 maplit = "^1.0"
 serde = { version = "1.0", features = ["derive"] }
@@ -22,9 +26,11 @@ colored = "1.9.0"
 ngrammatic = "^0.3.1"
 log = "0.4.0"
 env_logger = "0.7.1"
+
 [dev-dependencies]
 proptest = "0.9"
 test-case = "0.3.3"
+
 [build-dependencies]
 ron = "0.5.1"
 serde = { version = "1.0", features = ["derive"] }
