--- a/rudder-lang/Cargo.toml
+++ b/rudder-lang/Cargo.toml
@@ -13,25 +13,25 @@ name = "rudderc"
 path = "src/bin/rudderc.rs"
 
 [dependencies]
-maplit = "^1.0"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+maplit = "1"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 structopt = "0.3"
-nom = "^5.0"
-toml = "^0.5"
-regex = "^1.3"
-lazy_static = "^1.4"
-nom_locate = "^1.0"
-colored = "1.9.0"
-ngrammatic = "^0.3.1"
-log = "0.4.0"
-env_logger = "0.7.1"
+nom = "5"
+toml = "0.5"
+regex = "1"
+lazy_static = "1"
+nom_locate = "1"
+colored = "1"
+ngrammatic = "0.3"
+log = "0.4"
+env_logger = "0.7"
 
 [dev-dependencies]
 proptest = "0.9"
-test-case = "0.3.3"
+test-case = "0.3"
 
 [build-dependencies]
-ron = "0.5.1"
-serde = { version = "1.0", features = ["derive"] }
-colored = "1.9.0"
+ron = "0.5"
+serde = { version = "1", features = ["derive"] }
+colored = "1"
