Fixes #16886: rudder-lang packaging update

--- a/rudder-lang/tools/rudderc-dev.conf
+++ b/rudder-lang/tools/rudderc-dev.conf
@@ -1,9 +1,10 @@
 [default_paths]
     ncf="/usr/share/ncf"
     cfengine="/opt/rudder/bin/cf-promises"
-    rudderclibs="libs/"
+    py_modules="tools/"
+    rudderc_libs="libs/"
     translate_config="tools/translate_config.toml"
-    compile_input="tests/test_files/rl/"
-    compile_output="tests/test_files/target/"
-    translate_input="tests/test_files/json/"
-    translate_output="tests/test_files/target/"
+    compile_input="tests/test_files/tester/"
+    compile_output="tests/test_files/tester/"
+    translate_input="tests/test_files/tester/"
+    translate_output="tests/test_files/tester/"
