--- a/rudder-lang/tools/rudderc.conf
+++ b/rudder-lang/tools/rudderc.conf
@@ -1,9 +1,10 @@
 [default_paths]
     ncf="/usr/share/ncf"
     cfengine="/opt/rudder/bin/cf-promises"
-    rudderclibs="/opt/rudder/share/rudder-lang/lib/"
+    py_modules="/opt/rudder/share/python/"
+    rudderc_libs="/opt/rudder/share/rudder-lang/lib/"
     translate_config="/opt/rudder/share/rudder-lang/tools/translate_config.toml"
-    compile_input="/tmp/rudderc/tester/"
+    compile_input="/var/rudder/configuration-repository/techniques/ncf_techniques/"
     compile_output="/tmp/rudderc/tester/"
     translate_input="/tmp/rudderc/tester/"
     translate_output="/tmp/rudderc/tester/"
