Fixes #17041: Windows agents are unable to access shared-folder

--- a/relay/sources/apache/rudder-apache-relay-ssl.conf
+++ b/relay/sources/apache/rudder-apache-relay-ssl.conf
@@ -23,21 +23,13 @@ RewriteRule /policies/(.*?)/(.*) /var/rudder/share/$1/$2
 # This is the basic configuration for sub-directories of /var/rudder/share
 <Directory /var/rudder/share>
   SSLVerifyClient require
-  SSLUserName SSL_CLIENT_S_DN_CN
+  SSLUserName SSL_CLIENT_S_DN_UID
   SSLRequireSSL
 
   # rudder-networks-24.conf is automatically
   # generated according to the hosts allowed by rudder.
   Include /opt/rudder/etc/rudder-networks-24.conf
 </Directory>
-
-<Location /rudder/relay-api/shared-folder>
-  SSLVerifyClient require
-  SSLUserName SSL_CLIENT_S_DN_CN
-  SSLRequireSSL
-
-  Include /opt/rudder/etc/rudder-networks-24.conf
-</Location>
 
 # Expose the server UUID through https
 Alias /uuid /opt/rudder/etc/uuid.hive
@@ -105,6 +97,15 @@ ProxyPass /rudder/relay-api/ http://127.0.0.1:3030/rudder/relay-api/1/
 <Location /rudder/relay-api/>
   Require all denied
 </Location>
+
+<Location /rudder/relay-api/shared-folder>
+  SSLVerifyClient require
+  SSLUserName SSL_CLIENT_S_DN_UID
+  SSLRequireSSL
+
+  Include /opt/rudder/etc/rudder-networks-24.conf
+</Location>
+
 
 <Location /rudder/relay-api/shared-files>
   # rudder-networks-24.conf is automatically generated according to the hosts allowed by rudder.
